[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/components/system/first-run.gd" type="Script" id=1]
[ext_resource path="res://sources/themes/font-sizes/rbk-r-32.tres" type="DynamicFont" id=2]
[ext_resource path="res://sources/themes/panel/login_win.tres" type="StyleBox" id=3]
[ext_resource path="res://sources/themes/font-sizes/rbk-r-24.tres" type="DynamicFont" id=4]
[ext_resource path="res://sources/themes/edit-text/normal.tres" type="StyleBox" id=5]
[ext_resource path="res://sources/themes/font-sizes/rbk-r-18.tres" type="DynamicFont" id=6]
[ext_resource path="res://sources/themes/button/normal.tres" type="StyleBox" id=7]
[ext_resource path="res://sources/fonts/Rubik-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 14
use_filter = true
font_data = ExtResource( 8 )

[node name="first-run" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="e" type="Node" parent="."]

[node name="bg" type="ColorRect" parent="e"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="info" type="Label" parent="e"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -19.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "Привет"
align = 1
valign = 1
autowrap = true

[node name="win_name" type="PanelContainer" parent="e"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -74.0
margin_right = 150.0
margin_bottom = 74.0
rect_min_size = Vector2( 300, 0 )
custom_styles/panel = ExtResource( 3 )

[node name="margin" type="MarginContainer" parent="e/win_name"]
margin_right = 300.0
margin_bottom = 148.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="vb" type="VBoxContainer" parent="e/win_name/margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 138.0
custom_constants/separation = 10
alignment = 1

[node name="info" type="Label" parent="e/win_name/margin/vb"]
margin_right = 280.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 4 )
text = "Введите своё имя"
align = 1
valign = 1

[node name="name" type="HBoxContainer" parent="e/win_name/margin/vb"]
margin_top = 39.0
margin_right = 280.0
margin_bottom = 79.0
alignment = 1

[node name="name" type="Label" parent="e/win_name/margin/vb/name"]
margin_top = 5.0
margin_right = 138.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Имя:"
valign = 1

[node name="edit" type="LineEdit" parent="e/win_name/margin/vb/name"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )

[node name="next_new_user" type="Button" parent="e/win_name/margin/vb"]
margin_top = 89.0
margin_right = 280.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = ExtResource( 7 )
text = "Далее"

[node name="win_new_user" type="PanelContainer" parent="e"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -135.5
margin_right = 150.0
margin_bottom = 135.5
rect_min_size = Vector2( 300, 0 )
custom_styles/panel = ExtResource( 3 )

[node name="margin" type="MarginContainer" parent="e/win_new_user"]
margin_right = 300.0
margin_bottom = 271.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="vb" type="VBoxContainer" parent="e/win_new_user/margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 261.0
custom_constants/separation = 20

[node name="info" type="VBoxContainer" parent="e/win_new_user/margin/vb"]
margin_right = 280.0
margin_bottom = 72.0

[node name="info" type="Label" parent="e/win_new_user/margin/vb/info"]
margin_right = 280.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 4 )
text = "Введите логин и пароль"
align = 1
valign = 1

[node name="info2" type="Label" parent="e/win_new_user/margin/vb/info"]
margin_top = 33.0
margin_right = 280.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Если не хотите, можете не писать, но тогда ваш профиль не будет защищён"
align = 1
valign = 1
autowrap = true

[node name="vb" type="VBoxContainer" parent="e/win_new_user/margin/vb"]
margin_top = 92.0
margin_right = 280.0
margin_bottom = 251.0
custom_constants/separation = 20

[node name="login" type="HBoxContainer" parent="e/win_new_user/margin/vb/vb"]
margin_right = 280.0
margin_bottom = 40.0
alignment = 1

[node name="login" type="Label" parent="e/win_new_user/margin/vb/vb/login"]
margin_top = 5.0
margin_right = 138.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Логин:"
valign = 1

[node name="edit" type="LineEdit" parent="e/win_new_user/margin/vb/vb/login"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )

[node name="password" type="HBoxContainer" parent="e/win_new_user/margin/vb/vb"]
margin_top = 60.0
margin_right = 280.0
margin_bottom = 100.0
alignment = 1

[node name="password" type="Label" parent="e/win_new_user/margin/vb/vb/password"]
margin_top = 5.0
margin_right = 138.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Пароль:"
valign = 1

[node name="edit" type="LineEdit" parent="e/win_new_user/margin/vb/vb/password"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )

[node name="hb" type="HBoxContainer" parent="e/win_new_user/margin/vb/vb"]
margin_top = 120.0
margin_right = 280.0
margin_bottom = 159.0
custom_constants/separation = 10
alignment = 1

[node name="back_name" type="Button" parent="e/win_new_user/margin/vb/vb/hb"]
margin_right = 135.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = ExtResource( 7 )
text = "Назад"

[node name="next_reg" type="Button" parent="e/win_new_user/margin/vb/vb/hb"]
margin_left = 145.0
margin_right = 280.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = ExtResource( 7 )
text = "Далее"

[node name="c" type="Node" parent="."]

[node name="Tween" type="Tween" parent="c"]

[node name="Tween2" type="Tween" parent="c"]

[connection signal="pressed" from="e/win_name/margin/vb/next_new_user" to="." method="_on_next_new_user_pressed"]
[connection signal="pressed" from="e/win_new_user/margin/vb/vb/hb/back_name" to="." method="_on_back_name_pressed"]
[connection signal="pressed" from="e/win_new_user/margin/vb/vb/hb/next_reg" to="." method="_on_next_reg_pressed"]
[connection signal="tween_completed" from="c/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="c/Tween2" to="." method="_on_Tween2_tween_completed"]
